# startup-factory

./: README.md
2026-03-12/: README.md
2026-03-12-forma/: README.md  package-lock.json  package.json  test.forma  test.json  tsup.config.ts
2026-03-12-forma/examples/: generate_api.forma
2026-03-12-forma/src/: cli.ts
2026-03-12-mergeguard/: .mergeguard.yml  README.md  package-lock.json  package.json  pyproject.toml
2026-03-12-mergeguard/docs/research/: 1-scout-analysis.md  2-prd.md  3-tech-spec.md  4-builder-code.md
2026-03-12-mergeguard/mergeguard/: git_utils.py
2026-03-12-mergeguard/src/: config.ts  git.ts  github.ts  index.ts  llm.ts
2026-03-12-mergeguard/src/git/: diff.ts
2026-03-12-mergeguard/src/llm/: client.ts
2026-03-12-mergeguard/src/review/: analyze.ts
2026-03-12-nanostack/: README.md  go.mod  main.go  main_bin  nanostack_edge.go
2026-03-12-nanostack/cmd/: ship.go
2026-03-12/mergeguard/: package.json  tsconfig.json
2026-03-12/mergemate/: package-lock.json  package.json
2026-03-12/nanostack/: go.sum
2026-03-13-zeropm/: README.md
2026-03-13-zeropm/zeropm/: go.mod  go.sum  main.go
2026-03-15-ctx-surgeon/: README.md  test.sh
2026-03-15-drift/agentbox/: README.md  go.mod  main.go  test.sh
2026-03-15-shard/: test.sh
2026-03-15-shard/devscope/: .gitignore  devscope.yaml  go.mod  main.go  main.sh  test.sh
2026-03-17-omni/: rebuild.sh  test_rust.sh
2026-03-17-omni/engram/: README.md  requirements.txt  test.sh
2026-03-18-vigil/: README.md  test.sh
2026-03-18-vigil/vigil-cli/: index.js  package-lock.json  package.json
(+151 files in other folders)
